--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <main role="main">
       <%= render 'layouts/messages' %>
       <%= yield %>
+      <%= debug(params) if Rails.env.development? %>
     </main>
   <footer><%= render 'layouts/footer' %></footer>
 </body>
