--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title><%= yield(:title) %> | FTS30</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-  <%= favicon_link_tag "logo.jpg" %>
-</head>
-<body>
-  <header><%= render 'layouts/header' %></header>
-    <main role="main">
-      <%= render 'layouts/messages' %>
+  <head>
+    <title><%= yield(:title) %> | FTS30</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+    <%= favicon_link_tag "logo.jpg" %>
+  </head>
+  <body>
+    <%= render 'layouts/header' %>  
+    <div class="container">  
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>    
       <%= yield %>
-      <%= debug(params) if Rails.env.development? %>
-    </main>
-  <footer><%= render 'layouts/footer' %></footer>
-</body>
+      <div class="clear"></div>
+      <%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %> 
+    </div>
+  </body>
 </html>
