--- a/app/views/admin/subjects/index.html.erb
+++ b/app/views/admin/subjects/index.html.erb
@@ -1,3 +1,3 @@
 <% @subjects.each do |subject| %>
-  <li><%= subject.name %></li>
+  <li><%= link_to subject.name, admin_subject_path(subject) %></li>
 <% end %>
