--- a/app/views/layouts/_links.html.erb
+++ b/app/views/layouts/_links.html.erb
@@ -3,6 +3,10 @@
   <li><%= link_to 'Sign out', destroy_user_session_path, method: 'delete' %></li>
   <% if current_user.admin? %>
     <li><%= link_to 'New question', new_admin_question_path %></li>
+    <li><%= link_to 'Manager Subject', admin_subjects_path %></li>
+    <li><%= link_to 'Users', users_path %></li>
+  <% else %>
+    <li><%= link_to 'Users', users_path %></li>
   <% end %>  
 <% else %>
   <li><%= link_to 'Sign in', new_user_session_path %></li>
